--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "grapesjs-plugin-boilerplate",
-  "version": "0.3.1",
-  "description": "GrapesJS Plugin Boilerplate",
-  "main": "dist/YOUR-PLUGIN-NAME.min.js",
+  "name": "grapesjs-shape-divider",
+  "version": "0.3.2",
+  "description": "GrapesJS Plugin Section",
+  "main": "dist/grapesjs-shape-divider.min.js",
   "scripts": {
     "lint": "eslint src",
     "v:patch": "npm version --no-git-tag-version patch",
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/artf/grapesjs-plugin-boilerplate.git"
+    "url": "https://github.com/artf/grapesjs-shape-divider.git"
   },
   "keywords": [
     "grapesjs",
